--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Player" />
+        <service android:name=".MusicService"/>
     </application>
 
 </manifest>
