--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Player" />
+        <activity
+            android:name=".Player"
+            android:parentActivityName=".MainActivity"/>
         <service android:name=".MusicService"/>
     </application>
 
